<resources>
    <!--Général -->
    <string name="app_name">HomeActivity</string>

    <!--Général pour le logo et slogan-->
    <string name="TitleContent">HomeActivity</string>
    <string name="sloganContent">Gérez vos activités</string>
    <string name="logoContent">Logo HomeActivity, un mécanisme et un H</string>

    <!--Page d'ouverture -->
    <string name="Title_Connection">Connexion</string>
    <string name="GoogleBtn">Google</string>
    <string name="FacebookBtn">Facebook</string>
    <string name="EmailBtn">Email</string>
    <string name="GuestBtn">Invite</string>

    <!--Page d'ouverture + Login-->
    <string name="RegisterBtn">Vous souhaitez vous inscrire ? Cliquez ici</string>

    <!--Page d'authentification, inscription -->
    <string name="formName">Votre nom</string>
    <string name="formFirstName">Votre prénom</string>
    <string name="formEmailAdress">Adresse Email</string>
    <string name="formPassword">Mot de passe</string>

    <string name="formBtnLogin">Se connecter</string>
    <string name="formBtnRegister">S\'inscrire</string>
    <string name="Logout">Se déconnecter</string>

    <string name="registerLink">Vous n\'avez pas de compte ? Inscrivez-vous</string>

    <!--Page de Profile -->
    <string name="labelFirstnameName">Nom / Prenom</string>
    <string name="labelEmail">Email</string>
    <string name="labelInformations">Vos informations</string>

    <!--Registration kt -->
    <string name="registrationSucceed">Votre profil a bien été créé, bienvenue chez HomeActivity</string>
    <string name="registrationFailed">Problème d\'inscription de votre compte, vérifiez les informations</string>

    <!--Login kt -->
    <string name="loginSucceed">Vous êtes connectés, bienvenue chez HomeActivity</string>
    <string name="loginFailed">Vous avez effectué une erreur dans la saisie de votre mot de passe ou identifiant. Veuillez recommencer</string>


    <!--A Classer-->
    <string name="Titre_Connexion">Connexion</string>
    <string name="InviteBtn">Invite</string>
    <string name="InscriptionBtn">Inscription</string>
    <string name="Deconnexion">Deconnexion</string>
    <string name="emailAdress">Adresse Email</string>
    <string name="password">Mote de passe</string>
    <string name="SignInbtn">Se connecter</string>
    <string name="SignInFirstName">Prénom</string>
    <string name="SignInName">Nom</string>

    <!--Menu-->
    <string name="MenuCreationCompte">Gérer mon compte</string>
    <string name="MenuOptions">Options</string>
    <string name="MenuAide">Aide</string>
    <string name="topMenuCourses">Courses</string>
    <string name="topMenuTaches">Tâches</string>

    <!--Aide-->
    <string name="PageAide">"Aide Application "</string>
    <string name="PageAideTaches">Permet de gerer la creation de nouvelles tâches ménagères. Vous pourrez créer votre liste d\'actions à réaliser. Vous chronomètrer et cocher ce qui a déjà été fait.</string>
    <string name="PageAideCourses">Permet de creer une nouvelle liste de courses. Vous pouvez classer par thématique les éléments à acheter ainsi que cocher ce qui a déjà été acheté. Et tout cela très simplement. Gérez vos listes et prochains besoins.</string>
    <string name="PageAideAccount">Page profile sur laquelle vous pourrez gérer vos informations personnelles. Vous pourrez manager comme bon vous semble votre compte</string>
</resources>