<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/uidTextview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/labelInformations"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/firstnameTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/firstnameTextview"
        android:layout_width="127dp"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/labelNameFirstnameTextview"
        app:layout_constraintEnd_toStartOf="@+id/nameTextview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/labelNameFirstnameTextview" />

    <TextView
        android:id="@+id/nameTextview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/firstnameTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstnameTextview" />

    <TextView
        android:id="@+id/labelNameFirstnameTextview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="160dp"
        android:text="@string/labelFirstnameName"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/firstnameTextview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelEmailTextview"
        android:layout_width="128dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/labelEmail"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/emailTextview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNameFirstnameTextview" />

    <TextView
        android:id="@+id/emailTextview"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/labelEmailTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/labelEmailTextview" />

    <!--// Se Déconnecter-->
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/Logo_secondaire"
        android:text="@string/Logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextview" />

</androidx.constraintlayout.widget.ConstraintLayout>